# Game-of-life

./: CMakeLists.txt  GameWidget.cpp  GameWidget.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
